[package]
name = "treasury"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[features]
testutils = ["soroban-sdk/testutils"]

[dependencies]
soroban-sdk = { version = "22.0.11" }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = false
debug-assertions = false
overflow-checks-std = true
lto = true
panic = "abort"
incremental = false
codegen-units = 1
